# STARK

./: LICENSE  README.md  pyproject.toml
examples/: demo.ipynb
stark/: __init__.py  demo.ipynb  stark.py  utilities.py
