# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stark"
version = "0.0.1"
authors = [
  { name="Sharvaj Kubal", email="sharvajvk@gmail.com" },
]
urls = {"Source Code" = "https://github.com/schiebingerlab/STARK"}
description = "A Python package for denoising spatial transcriptomics data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "anndata",
    "scanpy",
    "scikit-learn",
    "seaborn",
    "matplotlib",
]

# setuptools
[tool.setuptools]
packages = ["stark"]

[tool.setuptools.dynamic]
version = {attr = "stark.__version__"}

